<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/daily_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/georgia"
            android:layout_width="@dimen/daily_flag_icon_size"
            android:layout_height="@dimen/daily_flag_icon_size"
            android:layout_marginTop="@dimen/spacing_16"
            android:src="@drawable/georgia"
            app:layout_constraintEnd_toStartOf="@+id/uk"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/uk"
            android:layout_width="@dimen/daily_flag_icon_size"
            android:layout_height="@dimen/daily_flag_icon_size"
            android:src="@drawable/uk"
            app:layout_constraintEnd_toStartOf="@+id/jamaica"
            app:layout_constraintStart_toEndOf="@+id/georgia"
            app:layout_constraintTop_toTopOf="@id/georgia"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/jamaica"
            android:layout_width="@dimen/daily_flag_icon_size"
            android:layout_height="@dimen/daily_flag_icon_size"
            android:src="@drawable/jamaica"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/uk"
            app:layout_constraintTop_toTopOf="@id/uk"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/capital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:textSize="@dimen/capital_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uk"
            tools:text="KINGSTON" />

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="@dimen/daily_weather_icon_size"
            android:layout_height="@dimen/daily_weather_icon_size"
            android:layout_marginTop="@dimen/spacing_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/capital"
            tools:ignore="ContentDescription"
            tools:src="@drawable/georgia" />

        <TextView
            android:id="@+id/main_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:textSize="@dimen/daily_temperature_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherIcon"
            tools:text="5" />

        <TextView
            android:id="@+id/weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_16"
            android:textSize="@dimen/daily_weather_description_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_temperature"
            tools:text="Broken Clouds" />

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginTop="@dimen/daily_detail_text_spacing"
            android:text="@string/details"
            android:textSize="@dimen/daily_details_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_description" />

        <TextView
            android:id="@+id/temperature_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/temperature"
            android:textSize="@dimen/daily_details_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details" />

        <TextView
            android:id="@+id/temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_16"
            android:textSize="@dimen/daily_details_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/temperature_label"
            tools:text="5" />

        <TextView
            android:id="@+id/feels_like_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/feels_like"
            android:textSize="@dimen/daily_details_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temperature_label" />

        <TextView
            android:id="@+id/feels_like_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_16"
            android:textSize="@dimen/daily_details_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/feels_like_label"
            tools:text="5" />

        <TextView
            android:id="@+id/humidity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/humidity"
            android:textSize="@dimen/daily_details_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/feels_like_label" />

        <TextView
            android:id="@+id/humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_16"
            android:textSize="@dimen/daily_details_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/humidity_label"
            tools:text="5" />

        <TextView
            android:id="@+id/pressure_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/pressure"
            android:textSize="@dimen/daily_details_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/humidity_label" />

        <TextView
            android:id="@+id/pressure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_16"
            android:textSize="@dimen/daily_details_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/pressure_label"
            tools:text="5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>